Made the navbar follow the user, added a text to the banner, and started adding more content to the page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
+    <!-- Style.css -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,8 +19,10 @@
     </nav>
     <div class="banner">
         <img src="Images/box1_bg.jpg" alt="" class="img-banner">
+        <h1 class="banner-text">Hello there ....</h1>
     </div>
     <div class="content">
+        <!-- Showcase boxes -->
         <div class="box2" id="leftbox">
             <img class="games_logos" id="ufo" src="Images/box2_logo_ufo.png" alt="">
         </div>
@@ -29,6 +32,11 @@
         <div class="box2" id="rightbox">
             <img class="games_logos" id="jump" src="Images/box2_logo_jump.png" alt="">
         </div>
+    </div>
+    <!-- Information -->
+    <div class="box3">
+        <!-- <img src="" alt="" srcset=""> -->
+        <div class="text-box3">Information</div>
     </div>
 </body>
 </html>
