fix banner text, added and styled the "info" boxes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="Images/box1_bg.jpg" alt="" class="img-banner">
         <h1 class="banner-text">Hello there ....</h1>
     </div>
-    <div class="content">
+    <div class="showcase">
         <!-- Showcase boxes -->
         <div class="box2" id="leftbox">
             <img class="games_logos" id="ufo" src="Images/box2_logo_ufo.png" alt="">
@@ -34,9 +34,19 @@
         </div>
     </div>
     <!-- Information -->
-    <div class="box3">
-        <!-- <img src="" alt="" srcset=""> -->
-        <div class="text-box3">Information</div>
+    <div class="info">
+        <div class="box3">
+            <!-- <img src="" alt="" srcset=""> -->
+            <div class="text1-box3">Information about me</div>
+        </div>
+        <div class="box3">
+            <!-- <img src="" alt="" srcset=""> -->
+            <div class="text2-box3">Information about what I do</div>
+        </div>
+        <div class="box3">
+            <!-- <img src="" alt="" srcset=""> -->
+            <div class="text3-box3">Information about random stuff</div>
+        </div>
     </div>
 </body>
 </html>
