--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <nav class="navbar">
-        <a class="nav-itens" href="#">Item 1</a>
-        <a class="nav-itens" href="#">Item 2</a>
+        <a class="nav-itens" href="#">Games</a>
+        <a class="nav-itens" href="#"></a>
         <img class="nav-logo" src="media/DC_Logo.png" alt="" srcset="">
-        <a class="nav-itens" href="#">Item 3</a>
-        <a class="nav-itens" href="#">Item 4</a>
+        <a class="nav-itens" href="#">About</a>
+        <a class="nav-itens" href="#"></a>
     </nav>
     <div class="banner">
         <img src="Images/box1_bg.jpg" alt="" class="img-banner">
-        <h1 class="banner-text">Hello there ....</h1>
+        <h1 class="banner-text">Hello there ... </h1><span>&#1F916</span>
     </div>
     <div class="showcase">
         <!-- Showcase boxes -->
