added "showmore" button

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <nav class="navbar">
         <a class="nav-itens" href="#"></a>
-        <a class="nav-itens" href="#">Games</a>
+        <a class="nav-itens" href="#games">Games</a>
         <img class="nav-logo" src="media/DC_Logo.png" alt="" srcset="">
-        <a class="nav-itens" href="#">About</a>
+        <a class="nav-itens" href="#about">About</a>
         <a class="nav-itens" href="#"></a>
     </nav>
     <div class="banner">
         <img src="Images/box1_bg.jpg" alt="" class="img-banner">
         <h1 class="banner-text">Hello there ... <span>&#129302</span></h1>
     </div>
-    <div class="showcase">
+    <div class="showcase" id="games">
         <!-- Showcase boxes -->
         <div class="box2" id="leftbox">
             <img class="games_logos" id="ufo" src="Images/box2_logo_ufo.png" alt="">
@@ -33,8 +33,9 @@
             <img class="games_logos" id="jump" src="Images/box2_logo_jump.png" alt="">
         </div>
     </div>
+    <div class="showmore"><a href="github.com/zmodz"></a>More...</div>
     <!-- Information -->
-    <div class="info">
+    <div class="info" id="about">
         <div class="box3">
             <!-- <img src="" alt="" srcset=""> -->
             <div class="text1-box3">Information about me</div>
