added twitter timeline

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img class="games_logos" id="jump" src="Images/box2_logo_jump.png" alt="">
         </div>
     </div>
-    <div class="showmore"><a href="github.com/zmodz"></a>More...</div>
+    <!-- <div class="showmore"><a href="github.com/zmodz"></a>More...</div> -->
     <!-- Information -->
     <div class="info" id="about">
         <div class="box3">
@@ -49,5 +49,9 @@
             <div class="text3-box3">Information about random stuff</div>
         </div>
     </div>
+    <div class="socials">
+        <a class="twitter-timeline" href="https://twitter.com/dr_mods?ref_src=twsrc%5Etfw">Tweets by dr_mods</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+
 </body>
 </html>
