removed twitter timeline

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="socials">
-        <a class="twitter-timeline" href="https://twitter.com/dr_mods?ref_src=twsrc%5Etfw">Tweets by dr_mods</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <!-- <a class="twitter-timeline" href="https://twitter.com/dr_mods?ref_src=twsrc%5Etfw">Tweets by dr_mods</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
     </div>
 
 </body>
