Stylized webpage, added socials

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="apple-touch-icon" sizes="57x57" href="./comp/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./comp/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./comp/assets/favicon/apple-icon-72x72.png">
@@ -49,7 +50,7 @@
           <span onclick="playAudio()">&#129302</span></h1>
     </div>
     <div class="title-section">
-        <h1 style="color: white; font-size: 100px; letter-spacing: 5px;" class="text-neon-effect">GAMES</h1>
+        <h1 style="color: white; font-size: 50px; letter-spacing: 5px;" class="text-neon-effect">GAMES</h1>
     </div>
     <div class="showcase" id="games">
         <!-- Showcase boxes -->
@@ -65,19 +66,26 @@
     </div>
     <!-- <div class="showmore"><a href="github.com/zmodz"></a>More...</div> -->
     <!-- Information -->
+    <div class="title-section">
+        <h1 style="color: white; font-size: 50px; letter-spacing: 5px;" class="text-neon-effect">INFO</h1>
+    </div>
     <div class="info" id="about">
-        <div class="box3">
-            <!-- <img src="" alt="" srcset=""> -->
-            <div class="text1-box3">Information about me</div>
+        <div class="box3" id="aboutme">
+            <div class="text1-box3">me good coder</div>
         </div>
         <div class="box3">
-            <!-- <img src="" alt="" srcset=""> -->
             <div class="text2-box3">Information about what I do</div>
         </div>
         <div class="box3">
-            <!-- <img src="" alt="" srcset=""> -->
             <div class="text3-box3">Information about random stuff</div>
         </div>
+    </div>
+    <!-- SOCIALS -->
+    <div class="title-section">
+        <h1 style="color: white; font-size: 50px; letter-spacing: 5px;" class="text-neon-effect">SOCIALS</h1>
+    </div>
+    <div class="socials">
+        <i class='bx bxl-twitter'></i>
     </div>
 </body>
 </html>
