--- a/index.html
+++ b/index.html
@@ -40,52 +40,25 @@
             <span class="bar"></span>
         </a>
     </nav>
-    <div class="banner box-shadow-1">
-        <img src="Images/box1_bg.jpg" alt="" class="img-banner">
-        <h1 class="banner-text text-neon-effect-2">Hello there ... 
-            <audio id="easterEggAudio">
-            <source src="./media/sounds/easterEggSound.mp3" type="audio/mpeg">
-            Your browser does not support this easter egg element.
-          </audio>
-          <span onclick="playAudio()">&#129302</span></h1>
-    </div>
-    <div class="title-section">
-        <h1 style="color: white; font-size: 50px; letter-spacing: 5px;" class="text-neon-effect">GAMES</h1>
-    </div>
-    <div class="showcase" id="games">
-        <!-- Showcase boxes -->
-        <div class="box2 box-shadow-1" id="leftbox">
-            <img class="games_logos" id="ufo" src="Images/box2_logo_ufo.png" alt="">
-        </div>
-        <div class="box2 box-shadow-1" id="middlebox">
-            <img class="games_logos" id="sz" src="Images/box2_logo_pag.png" alt="">
-        </div>
-        <div class="box2 box-shadow-1" id="rightbox">
-            <img class="games_logos" id="jump" src="Images/box2_logo_jump.png" alt="">
-        </div>
-    </div>
-    <!-- <div class="showmore"><a href="github.com/zmodz"></a>More...</div> -->
-    <!-- Information -->
-    <div class="title-section">
-        <h1 style="color: white; font-size: 50px; letter-spacing: 5px;" class="text-neon-effect">INFO</h1>
-    </div>
-    <div class="info" id="about">
-        <div class="box3" id="aboutme">
-            <div class="text1-box3">me good coder</div>
-        </div>
-        <div class="box3">
-            <div class="text2-box3">Information about what I do</div>
-        </div>
-        <div class="box3">
-            <div class="text3-box3">Information about random stuff</div>
-        </div>
-    </div>
-    <!-- SOCIALS -->
-    <div class="title-section">
-        <h1 style="color: white; font-size: 50px; letter-spacing: 5px;" class="text-neon-effect">SOCIALS</h1>
-    </div>
-    <div class="socials">
-        <i class='bx bxl-twitter'></i>
+    <div class="timeline-box">
+        <h1 style="text-align: center;">It starts with ...</h1>
+        <ul>
+            <li style="--accent-color:#41516C">
+                <div class="date">2012</div>
+                <div class="title">Title 1</div>
+                <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
+            </li>
+            <li style="--accent-color:#1B5F8C">
+                <div class="date">2013</div>
+                <div class="title">Title 2</div>
+                <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
+            </li>
+            <li style="--accent-color:#1B5F8C">
+                <div class="date">2013</div>
+                <div class="title">Title 2</div>
+                <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
