--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <ul>
             <li style="--accent-color:#41516C">
                 <div class="date">2012</div>
-                <div class="title">Title 1</div>
+                <div class="title">Start of everything</div>
                 <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
             </li>
             <li style="--accent-color:#1B5F8C">
                 <div class="date">2013</div>
-                <div class="title">Title 2</div>
+                <div class="title">Jump & Jump</div>
                 <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
             </li>
             <li style="--accent-color:#1B5F8C">
-                <div class="date">2013</div>
-                <div class="title">Title 2</div>
+                <div class="date">2014</div>
+                <div class="title">Unity, Unity, Unity</div>
                 <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
             </li>
         </ul>
